Release notes for Review Board can be found under
docs/releasenotes/reviewboard/.

These can also be read online at
http://www.review-board.org/docs/releasenotes/dev/reviewboard/.