@@ -7,6 +7,7 @@ Review Board Release Notes
 .. toctree::
    :maxdepth: 1
 
+   1.0
    1.0-rc-3
    1.0-rc-2
    1.0-rc-1
