@@ -158,7 +158,7 @@ setup(name="ReviewBoard",
       install_requires=[
           'Django>=1.0.2',
           'django_evolution',
-          'Djblets>=0.5rc2',
+          'Djblets>=0.5',
           'Pygments>=0.10',
           'flup',
           'pytz'
