@@ -1,3 +1,6 @@
+Release Notes
+=============
+
 Release notes for Review Board can be found under
 docs/releasenotes/reviewboard/.
 
